--- a/components/io-usecase-customer/style.module.css
+++ b/components/io-usecase-customer/style.module.css
@@ -107,6 +107,7 @@
   font-size: 50px;
   font-weight: 700;
   line-height: 1;
+  color: var(--white);
 
   @media (--large) {
     font-size: 80px;
