adds opt in redirects and banner for dev dot beta

--- a/pages/style.css
+++ b/pages/style.css
@@ -1,5 +1,6 @@
 /* Global Styles */
 @import '~@hashicorp/mktg-global-styles/style.css';
+@import '~@hashicorp/design-system-tokens/dist/devdot/css/tokens.css';
 
 /* Print Styles */
 @import './print.css';
