--- a/pages/style.css
+++ b/pages/style.css
@@ -47,6 +47,8 @@ p {
 
 :root {
   --ce-color: purple;
+  --font-body-hds: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+    sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 }
 
 .content_exclusion {
