--- a/pages/style.css
+++ b/pages/style.css
@@ -1,5 +1,6 @@
 /* Global Styles */
 @import '~@hashicorp/mktg-global-styles/style.css';
+@import '~@hashicorp/design-system-tokens/dist/devdot/css/tokens.css';
 
 /* Print Styles */
 @import './print.css';
@@ -46,6 +47,8 @@ p {
 
 :root {
   --ce-color: purple;
+  --font-body-hds: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+    sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 }
 
 .content_exclusion {
