--- a/components/io-home-hero-alt/style.module.css
+++ b/components/io-home-hero-alt/style.module.css
@@ -25,25 +25,18 @@
   min-height: 100%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 1fr var(--content-max-width) 1fr;
+  grid-template-columns: 418px var(--content-max-width) 418px;
   justify-content: space-between;
-  align-items: flex-end;
-
-  & > *:nth-child(1) {
-    grid-column: 1;
-  }
-
-  & > *:nth-child(2) {
-    grid-column: -1;
-  }
 }
 
 .patternsStart {
+  position: relative;
   grid-column: 1;
 }
 
 .patternsEnd {
-  grid-column: -1;
+  position: relative;
+  grid-column: 3;
 }
 
 .container {
