--- a/components/io-home-hero-alt/style.module.css
+++ b/components/io-home-hero-alt/style.module.css
@@ -66,12 +66,11 @@
   display: grid;
 
   & > * {
-    grid-area: 1 / 1;
+    min-width: 184px;
     color: transparent;
   }
 
   &.settled > *:not([aria-hidden='true']) {
     color: white;
-    z-index: 1;
   }
 }
