feat(CRO): Implement homepage CTA copy test #3 (#2471)
* fix merge conflict

* get basic client side w/ context working

* try to add analytics event

* cleanup from other middleware based approach

* add loading implementation to avoid layout thrash

* move to min width approach

* install @hashicorp/react-standalone-link

* fix images

* implements result track calls

* import React

* fix casing

* fix button theme

* convert to min width approach

* simplify setup

* bump to latest subnav

* remove index

---------

Co-authored-by: Alex Carpenter <im.alexcarpenter@gmail.com>

--- a/components/io-home-hero-alt/style.module.css
+++ b/components/io-home-hero-alt/style.module.css
@@ -27,6 +27,11 @@
   display: grid;
   grid-template-columns: 418px var(--content-max-width) 418px;
   justify-content: space-between;
+
+  & img {
+    display: grid;
+    object-fit: cover;
+  }
 }
 
 .patternsStart {
@@ -46,4 +51,22 @@
 .inner {
   margin: 0 auto;
   max-width: var(--content-max-width);
+  text-align: center;
+}
+
+.actions {
+  margin-top: var(--wpl-spacing-06);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 32px;
+}
+
+.actionsPrimary {
+  min-width: 184px;
+  color: transparent;
+
+  &.settled {
+    color: var(--brand-text-on-primary);
+  }
 }
