--- a/components/subnav/style.module.css
+++ b/components/subnav/style.module.css
@@ -1,14 +1,1 @@
-.subnav {
-  & [data-ga-button='try-for-free'],
-  & [data-ga-button='try-terraform-cloud'] {
-    color: transparent;
-    min-width: 184px;
-  }
-}
-
-.settled {
-  & [data-ga-button='try-for-free'],
-  & [data-ga-button='try-terraform-cloud'] {
-    color: white;
-  }
-}
+/* .subnav {} */
